Change API of Game interface